# toy-classloader-in-c

./: CMakeLists.txt  EmbedJarContent.cmake  README.md  main.c
bifit/: bifit.c  bifit.h
bifit/load_class/: access_flags.h  class_access_flags.h  class_header.h  class_identifier.h  constant_pool.h  fields.h  interfaces.h  load_class.h  load_class_utils.h  methods.h
bifit/parse_class/: constants.h  header.h  helpers.h  interfaces.h  methods.h  parse_class.h
bifit/util/: bifit_number_util.h  bifit_string_util.h
cmake/: EmbedJarContent.cmake  FileEmbed.cmake
parse_class/: attributes.h  combined.h  constant_pool.h  constants.h  constants_backup.h  fields.h  header.h  helpers.h  interfaces.h  methods.h  parse_class.h  parse_helpers.h
